# HelperTools

./: CMakeLists.txt  README.md
python_tools/: README.md
python_tools/to_gif/: README.md  main.py
sleep_signal_osc/: CMakeLists.txt  README.md  main.cpp  messager.cpp
sleep_signal_osc/include/: common.hpp  flags.hpp
sleep_signal_osc/resources/: CTRL_BREAK_EVENT.txt  README.txt  stop.bat
